--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,6 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
+:root {
+  --border-color: rgb(61, 68, 77);
+  --borderradius-size: 6px;
+  --box-shadow: 0px 1px 1px 0px #1c2128cc, 0px 1px 3px 0px #1c2128cc;
+  --color-letrafuerte: #d1d7e0;
+  --color-letraclaro: #9198a1;
+  --color-letraazul: #478be6;
+  --color-1: #151b23;
+  --color-2: #212830;
+}
+
 * {
   margin: 0;
   padding: 0;
