--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,53 +1,26 @@
 .container {
+  background-color: var(--color-1);
   position: fixed;
   top: 0;
   left: 0;
-  width: 100%;
+  width: 64px;
+  height: 100dvh;
   display: flex;
+  flex-direction: column;
   justify-content: space-between;
   align-items: center;
   transition: 0.6s;
-  padding: 5px 35px;
+  padding: 18px 35px;
   z-index: 1000;
-  padding-top: 10px;
 }
 
-.sticky {
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.6s ease-in-out;
-  padding: 3.5px 45px;
-  background-color: #11192761;
-  backdrop-filter: blur(3px);
-  z-index: 1000;
-  padding-top: 7px;
-  padding-bottom: 7px;
-}
-
-.hidden {
-  position: fixed;
-  top: -150px;
-  left: 0;
-  width: 100%;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  transition: 0.6s ease-in-out;
-  padding: 3.5px 45px;
-  backdrop-filter: blur(3px);
-  z-index: 1000;
-  padding-top: 10px;
+.container span {
+  color: var(--color-letraclaro);
 }
 
 .logo {
   position: relative;
   font-weight: 600;
-  color: #e4e4e4;
   text-decoration: none;
   font-size: 1.7em;
   text-transform: uppercase;
@@ -65,6 +38,7 @@
 .list {
   position: relative;
   display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   touch-action: pan-left;
@@ -125,7 +99,7 @@
 
 .switch::before {
   position: absolute;
-  content: "🌙";
+  content: "";
 
   left: calc(1.5rem - 1.6rem);
   top: calc(1.5rem - 1.6rem);
@@ -133,9 +107,9 @@
   height: 1.6rem;
   width: 1.6rem;
   cursor: pointer;
-  border: 1px solid rgba(100, 116, 139, 0.527);
+  border: 1px solid var(--border-color);
   border-radius: 9999px;
-  background-color: rgba(255, 255, 255, 1);
+  background-color: var(--color-letraclaro);
   box-shadow: 0 3px 10px rgba(100, 116, 139, 0.327);
   transition: all 0.3s ease;
 }
@@ -167,6 +141,9 @@
 }
 
 .list li a svg {
+  display: block;
+}
+.list li a span {
   display: none;
 }
 
