--- a/src/components/Education/education.module.css
+++ b/src/components/Education/education.module.css
@@ -1,94 +1,43 @@
-.container {
-  min-height: 75vh;
+.section {
+  width: 100%;
+  height: 100%;
+  padding: 12px 24px;
+}
+
+.section > div > h4 {
+  color: var(--color-letraclaro);
+  padding: 0px 0px 12px 0px;
+  font-size: small;
+}
+
+.section > ul {
+  width: 100%;
+  height: 80%;
   display: flex;
-  justify-content: flex-start;
-  align-items: center;
   flex-direction: column;
-  padding: 15px;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 10%;
 }
-
-.container h2 {
-  text-align: center;
-  color: #f2f2f2;
-  font-size: 40px;
-  letter-spacing: 4px;
-  font-weight: 400;
-}
-
-.subcontainer {
+.section > ul > li {
   display: flex;
-  align-items: stretch;
-  flex-direction: column;
-  margin-top: 30px;
-  width: 75%;
-  color: #f2f2f2;
-  font-size: clamp(20px, 30px, 30px);
-  letter-spacing: 3px;
-  font-weight: 400;
+  align-items: baseline;
+}
+.section > ul > li h5 {
+  margin-right: 12px;
+  color: #fff;
+  font-size: large;
+  flex-grow: 1;
 }
 
-.principales {
-  padding-top: 15px;
-  padding-bottom: 15px;
+.section > ul > li:first-child h5 {
+  font-size: x-large;
 }
-
-.principales > summary {
-  box-sizing: border-box;
-  padding: 15px;
-  cursor: pointer;
-  list-style: none;
-  display: flex;
-  align-items: center;
+.section > ul > li span {
+  color: var(--color-letrafuerte);
 }
-
-.principales summary svg {
-  margin-right: 5px;
-}
-
-.principales details {
-  margin-left: 2.5%;
-}
-
-.secundarios > summary {
-  list-style: inside;
-  cursor: pointer;
-  list-style: none;
-  display: flex;
-  align-items: center;
-}
-
-.secundarios p {
-  margin-left: 1.5%;
-  font-size: clamp(10px, 25px, 25px);
-  letter-spacing: 3px;
-  font-weight: 100;
-}
-
 @media screen and (min-width: 767px) and (max-width: 1024px) {
-  .container {
-    min-height: auto;
-    margin-top: 35px;
-  }
-
-  .subcontainer {
-    width: 85%;
-  }
 }
 
 @media screen and (max-width: 767px) {
-  .container {
-    margin-top: 35px;
-  }
-
-  .subcontainer {
-    width: 85%;
-  }
-  .secundarios p {
-    font-size: 20px;
-    letter-spacing: 2px;
-  }
-
-  .secundarios summary {
-    font-size: 22px;
-  }
 }
