--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -1,18 +1,53 @@
 .container {
-  width: 90vw;
-  margin: 10px 4px 10px 4px;
-  border: 1px solid black;
-  border-radius: 12px;
-  color: whitesmoke;
-  box-shadow: 0px 15px 20px rgba(0, 0, 0, 0.2);
+  width: 100%;
+  border: 0.0625rem solid var(--border-color);
+  border-radius: var(--borderradius-size);
+  box-shadow: var(--box-shadow);
+}
+.titlecontainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  justify-content: center;
+  gap: 6px;
+  padding: 12px 24px 40px 24px;
+  background-color: var(--color-1);
+  height: calc(90px + 28px);
+}
+
+.firstcomment {
+  font-size: small;
+  color: var(--color-letraclaro);
+}
+
+.titlecontainer .title,
+.firstcomment {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  gap: 6px;
+  background-color: var(--color-1);
+}
+.title h5,
+.title h4 {
+  font-size: large;
+  color: var(--color-letraazul);
+}
+.title h6 {
+  font-size: large;
+  color: var(--color-letraclaro);
 }
 
 .thumbnail {
   flex: 1 1 200px;
+  background-color: var(--color-1);
+  border-top-left-radius: var(--borderradius-size);
+  border-top-right-radius: var(--borderradius-size);
 }
 
 .thumbnail img {
-  border-radius: 8px;
+  border-top-left-radius: var(--borderradius-size);
+  border-top-right-radius: var(--borderradius-size);
 }
 
 .loader {
@@ -22,65 +57,76 @@
 
 .content {
   flex: 2 1 300px;
-  padding: 10px;
   text-align: start;
-  margin-top: 15px;
 }
 
-.content details summary {
-  box-sizing: border-box;
-  padding: 15px 0px 15px 0px;
-  cursor: pointer;
-  list-style: none;
-  display: flex;
-  align-items: center;
+.ulcontainer {
+  position: relative;
 }
 
-.content details summary svg {
-  margin-right: 4px;
+.ulcontainer,
+.update {
+  border-top: 1px solid var(--border-color);
+  padding: 12px 24px;
+  width: 100%;
 }
 
-.content h5 {
-  font-size: 26px;
-  color: #282828;
-  font-weight: 600;
+.infotooltip p {
+  font-size: small;
+  color: var(--color-letrafuerte);
+  margin: 4px 0px;
 }
 
-.content p {
-  font-size: 20px;
+.ulcontainer p,
+.ulcontainer h6 {
+  color: var(--color-letrafuerte);
+  font-size: medium;
   margin-top: 8px;
   margin-bottom: 8px;
 }
 
-.cardStack {
-  font-size: 1.35rem;
-  font-weight: 300;
-  margin: 30px 0 20px 10px;
-  padding: 0 20px 0 20px;
-  white-space: normal;
-  color: rgb(250, 250, 250);
-  background-color: #28282820;
-}
-
-.ulcontainer {
-  border-top: 1px solid #282828;
-  padding-top: 5px;
-}
-
-.ulcontainer h6 {
-  font-size: 1.4rem;
-  font-weight: 400;
+.ulcontainer div p {
+  font-size: small;
+  color: var(--color-letraclaro);
 }
 
 .ulcontainer ul {
   display: flex;
   flex-wrap: wrap;
-  padding-top: 8px;
 }
+
 .content ul li {
-  margin-top: 5px;
-  margin-left: 8px;
-  padding: 0 8px 0 8px;
-  border: 1px solid black;
-  box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
+  padding: 6px 12px;
+  font-size: medium;
+  margin: 8px;
+  color: var(--color-letraazul);
+  background-color: #4184e41a;
+  border-radius: var(--borderradius-size);
+}
+
+.content ul li:hover {
+  color: #fff;
+  background-color: var(--color-letraazul);
+}
+
+.infotooltip {
+  height: 29px;
+  width: auto;
+  font-size: small;
+  color: var(--color-letrafuerte);
+  position: absolute;
+  top: -29px;
+  left: 24px;
+  background-color: var(--color-2);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 6px;
+  padding: 0px 6px;
+  border-right: 1px solid var(--border-color);
+  border-left: 1px solid var(--border-color);
+  border-top: 1px solid var(--border-color);
+  border-top-left-radius: var(--borderradius-size);
+  border-top-right-radius: var(--borderradius-size);
+  z-index: 999;
 }
