--- a/src/components/Proyects/proyects.module.css
+++ b/src/components/Proyects/proyects.module.css
@@ -1,94 +1,24 @@
 .all {
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   flex-direction: column;
   align-items: center;
-  height: 100vh;
+  height: auto;
 }
 
 .all h2 {
-  color: #f2f2f2;
-  font-size: 40px;
-  letter-spacing: 4px;
-  font-weight: 400;
-  margin-bottom: 30px;
-}
-
-.carousel {
-  overflow: hidden;
-  width: 1080px;
-
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  padding-bottom: 30px;
-}
-
-.inner {
-  white-space: nowrap;
-  transition: transform 0.3s;
-  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.05);
-  width: 100%;
-}
-
-.carousel_buttons {
-  display: flex;
-  justify-content: space-around;
-}
-
-.button-arrow {
-  background: none;
-  border: none;
-  cursor: pointer;
-  margin-top: 20px;
-  width: 45px;
-  height: 45px;
-}
-
-.span {
-  font-size: 25px;
-}
-
-.span:active {
-  color: whitesmoke;
-}
-
-.indicators {
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  margin-top: 20px;
-}
-.indicator_buttons {
-  border: none;
-  cursor: pointer;
-}
-
-.indicators > button {
-  margin: 5px;
-  background: none;
-}
-
-.indicator_symbol {
-  color: gray;
-}
-
-.indicator_symbol_active {
-  color: whitesmoke;
+  text-align: start;
+  align-self: flex-start;
+  color: var(--color-letrafuerte);
   font-size: x-large;
+  margin-bottom: 16px;
 }
-/*display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  align-items: center;
-  align-content: center;
-  text-align: center;
-  position: relative;*/
+
 .cardCont {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
+  gap: 16px;
 }
 
 @media screen and (max-width: 1280px) {
