--- a/src/components/Card/card.module.css
+++ b/src/components/Card/card.module.css
@@ -51,8 +51,12 @@
 }
 
 .loader {
-  text-align: center;
-  padding: 25px;
+  padding: 50px;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .content {
