--- a/src/components/Loading/loading.module.css
+++ b/src/components/Loading/loading.module.css
@@ -1,30 +1,37 @@
-.div {
-  text-align: center;
+.svg {
+  width: 3.25em;
+  transform-origin: center;
+  animation: rotate4 2s linear infinite;
 }
 
-.loader {
-  display: inline-flex;
-  gap: 10px;
+.circle {
+  fill: none;
+  stroke: hsl(214, 97%, 59%);
+  stroke-width: 2;
+  stroke-dasharray: 1, 200;
+  stroke-dashoffset: 0;
+  stroke-linecap: round;
+  animation: dash4 1.5s ease-in-out infinite;
 }
-.loader:before,
-.loader:after {
-  content: "";
-  height: 20px;
-  aspect-ratio: 1;
-  border-radius: 50%;
-  background: linear-gradient(#222 0 0) top/100% 40% no-repeat,
-    radial-gradient(farthest-side, #000 95%, #0000) 50%/8px 8px no-repeat #fff;
-  animation: l7 1.5s infinite alternate ease-in;
-}
-@keyframes l7 {
-  0%,
-  70% {
-    background-size: 100% 40%, 8px 8px;
-  }
-  85% {
-    background-size: 100% 120%, 8px 8px;
-  }
+
+@keyframes rotate4 {
   100% {
-    background-size: 100% 40%, 8px 8px;
+    transform: rotate(360deg);
+  }
+}
+
+@keyframes dash4 {
+  0% {
+    stroke-dasharray: 1, 200;
+    stroke-dashoffset: 0;
+  }
+
+  50% {
+    stroke-dasharray: 90, 200;
+    stroke-dashoffset: -35px;
+  }
+
+  100% {
+    stroke-dashoffset: -125px;
   }
 }
