--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -1,5 +1,5 @@
 .container {
-  background-color: var(--color-1);
+  background-color: var(--color-2);
   position: fixed;
   top: 0;
   left: 0;
@@ -42,23 +42,12 @@
   justify-content: center;
   align-items: center;
   touch-action: pan-left;
+  gap: 6px;
 }
 
 .list li {
   position: relative;
   list-style: none;
-}
-
-.list li a {
-  position: relative;
-  margin: 0 20px;
-  text-decoration: none;
-  color: #ffff;
-  cursor: pointer;
-  font-size: 1.05rem;
-  letter-spacing: 2px;
-  font-weight: 500;
-  transition: 0.6s;
 }
 
 .list li a:after {
@@ -74,6 +63,12 @@
 
 .list li a:hover:after {
   width: 100%;
+}
+
+.modoclarooscuro {
+  color: var(--color-letraclaro);
+  font-size: x-small;
+  text-align: center;
 }
 
 .sticky .logo,
