--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -11,6 +11,12 @@
   --color-letraazul: #478be6;
   --color-1: #151b23;
   --color-2: #212830;
+
+  --letra-xsmall: clamp(0.625rem, 0.64vw + 0.375rem, 0.875rem);
+  --letra-small: clamp(0.7rem, 0.8vw + 0.5rem, 1rem);
+  --letra-medium: clamp(0.875rem, 1vw + 0.75rem, 1.25rem);
+  --letra-large: clamp(1.5rem, 2.5vw + 1rem, 3rem);
+  --letra-xlarge: clamp(2rem, 3.2vw + 1.25rem, 3.5rem);
 }
 
 * {
@@ -29,11 +35,11 @@ body {
   scroll-behavior: smooth;
 }
 
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 16px;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   height: 56px;
   border-radius: 8px;
   border: 4px solid transparent;
@@ -41,7 +47,7 @@ body::-webkit-scrollbar-thumb {
   background-color: hsl(0, 0%, 67%);
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   border: none;
   background-color: #282828;
 }
