--- a/src/components/About/about.module.css
+++ b/src/components/About/about.module.css
@@ -1,30 +1,42 @@
 .main {
-  padding: 12px 24px;
-
+  padding: 12px 24px 24px 24px;
   height: 100%;
   width: 100%;
 }
 
 .main > span {
-  font-size: small;
+  font-size: var(--letra-xsmall);
   color: var(--color-letraclaro);
   padding: 6px 12px 6px 0px;
   word-spacing: 6px;
 }
 
 .main div h2 {
-  font-size: xx-large;
+  font-size: var(--letra-large);
   color: #fff;
 }
 
 .main div p {
   color: var(--color-letrafuerte);
-  font-size: medium;
+  font-size: var(--letra-small);
+  margin-bottom: 12px;
 }
 .main > div {
-  height: 90%;
+  height: calc(100% - 32px);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
   justify-content: space-around;
+  overflow-y: auto;
+}
+
+@media screen and (max-width: 530px) {
+  .main {
+    padding: 6px 12px;
+  }
+}
+@media screen and (max-width: 398px) {
+  .main > div {
+    height: calc(100% - 55px);
+  }
 }
