--- a/src/components/Education/education.module.css
+++ b/src/components/Education/education.module.css
@@ -7,37 +7,38 @@
 .section > div > h4 {
   color: var(--color-letraclaro);
   padding: 0px 0px 12px 0px;
-  font-size: small;
+  font-size: var(--letra-xsmall);
 }
 
 .section > ul {
   width: 100%;
-  height: 80%;
+  height: calc(100% - 35px);
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  justify-content: center;
-  gap: 10%;
+  justify-content: flex-start;
+  gap: 5%;
+  overflow-y: auto;
 }
 .section > ul > li {
   display: flex;
   align-items: baseline;
 }
-.section > ul > li h5 {
-  margin-right: 12px;
+.section > ul > li b {
+  margin-right: 6px;
   color: #fff;
-  font-size: large;
-  flex-grow: 1;
+  font-size: var(--letra-medium);
 }
 
-.section > ul > li:first-child h5 {
-  font-size: x-large;
+.section > ul > li:first-child span b {
+  transform: scale(1.03);
 }
 .section > ul > li span {
   color: var(--color-letrafuerte);
+  font-size: var(--letra-small);
 }
-@media screen and (min-width: 767px) and (max-width: 1024px) {
-}
-
-@media screen and (max-width: 767px) {
+@media screen and (max-width: 530px) {
+  .section {
+    padding: 6px 12px;
+  }
 }
