--- a/src/components/Footer/footer.module.css
+++ b/src/components/Footer/footer.module.css
@@ -1,19 +1,20 @@
 .footer {
   min-height: 10vh;
   margin-top: 35px;
-  border-top: 3px ridge #dbd4b470;
+
   margin-left: 35px;
   margin-right: 35px;
   display: flex;
   align-items: center;
   justify-content: center;
-  color: whitesmoke;
-  font-size: 15px;
+  color: var(--color-letrafuerte);
+  font-size: var(--letra-xsmall);
   letter-spacing: 1.5px;
   padding: 10px;
+  text-align: center;
 }
 .alejo {
-  font-size: 16px;
+  font-size: var(--letra-xsmall);
   letter-spacing: 1.6px;
 }
 
