--- a/src/components/NamePanel/namepanel.module.css
+++ b/src/components/NamePanel/namepanel.module.css
@@ -13,14 +13,14 @@
 }
 
 .superiorpart h1 {
-  font-size: x-large;
+  font-size: clamp(0.675rem, 1vw + 0.75rem, 1.65rem);
   color: #fff;
   margin-left: 5%;
 }
 
 .superiorpart h2 {
   margin-left: 5%;
-  font-size: small;
+  font-size: var(--letra-xsmall);
   color: var(--color-letraclaro);
 }
 
@@ -32,6 +32,7 @@
 .superiorpart ul li a,
 .superiorpart ul li button {
   color: var(--color-letrafuerte);
+  font-size: var(--letra-small);
   display: flex;
   align-items: center;
   justify-content: flex-start;
@@ -64,6 +65,11 @@
   background-color: var(--border-color);
 }
 
+.mail {
+  overflow-wrap: break-word;
+  word-break: break-all;
+}
+
 .hr {
   border-bottom: 1px solid var(--border-color);
   width: 100%;
@@ -74,6 +80,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  margin-bottom: 8px;
 }
 
 .buttoncontainer button {
@@ -86,7 +93,7 @@
   position: relative;
 
   background: transparent;
-  font-size: 18px;
+  font-size: var(--letra-small);
   cursor: pointer;
   backdrop-filter: blur(5px);
   transition: background-color 0.3s ease-in-out;
@@ -121,4 +128,144 @@
 
 .buttoncontainer button:hover:before {
   transform: translateX(0);
+}
+
+@media screen and (max-width: 1400px) {
+  .aside {
+    padding: 6px 12px;
+  }
+}
+
+@media screen and (max-width: 1200px) {
+  .buttoncontainer button {
+    font-size: small;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .aside {
+    width: 90dvw;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+    padding: 12px;
+  }
+
+  .superiorpart {
+    width: 100%;
+    height: auto;
+  }
+
+  .superiorpart ul {
+    margin-top: 0;
+  }
+
+  .superiorpart ul li a,
+  .superiorpart ul li button {
+    color: var(--color-letrafuerte);
+    font-size: var(--letra-small);
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    padding: 0px 24px 0px 6px;
+    width: 100%;
+    border-radius: var(--borderradius-size);
+  }
+  .superiorpart ul li:hover a,
+  .superiorpart ul li:hover button {
+    background-color: var(--border-color);
+  }
+
+  .continferior {
+    width: 100%;
+  }
+
+  .inferiorpart ul li a {
+    color: var(--color-letrafuerte);
+    font-size: small;
+    display: flex;
+    align-items: center;
+    justify-content: flex-start;
+    gap: 3%;
+    padding: 0px 6px 0px 6px;
+    width: 110%;
+    border-radius: var(--borderradius-size);
+  }
+  .inferiorpart ul li:hover a {
+    background-color: var(--border-color);
+  }
+
+  .mail {
+    overflow-wrap: break-word;
+    word-break: break-all;
+  }
+
+  .hr {
+    border-bottom: 1px solid var(--border-color);
+    width: 90%;
+    margin: 12px auto;
+  }
+
+  .buttoncontainer {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-bottom: 8px;
+  }
+
+  .buttoncontainer button {
+    color: var(--color-letrafuerte);
+    border-radius: var(--borderradius-size);
+    padding: 6px 12px;
+    text-align: center;
+    border: 1px solid var(--border-color);
+    text-transform: uppercase;
+    position: relative;
+
+    background: transparent;
+    font-size: var(--letra-small);
+    cursor: pointer;
+    backdrop-filter: blur(5px);
+    transition: background-color 0.3s ease-in-out;
+    position: relative;
+    overflow: hidden;
+  }
+  /*
+.buttoncontainer button:hover {
+  background-color: var(--border-color);
+}*/
+
+  .buttoncontainer button:before {
+    content: "";
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: linear-gradient(
+      45deg,
+      rgba(61, 68, 77, 0.5) 0%,
+      rgba(255, 255, 255, 0) 100%
+    );
+    transform: translateX(-100%);
+    transition: transform 0.3s ease-in-out;
+    pointer-events: none;
+  }
+
+  .buttoncontainer button:hover {
+    background-color: (61, 68, 77, 0.5);
+  }
+
+  .buttoncontainer button:hover:before {
+    transform: translateX(0);
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .aside {
+    padding-right: 22px;
+    padding-left: 22px;
+  }
 }
