--- a/src/components/Navbar/navbar.module.css
+++ b/src/components/Navbar/navbar.module.css
@@ -142,6 +142,13 @@
   display: none;
 }
 
+@media screen and (max-width: 1400px) {
+  .container {
+    width: 50px;
+    padding: 18px 30px;
+  }
+}
+
 @media screen and (min-width: 767px) and (max-width: 1024px) {
   .list li a {
     font-size: 16px;
@@ -153,15 +160,19 @@
   }
 }
 
-@media screen and (max-width: 767px) {
-  .container,
+@media screen and (max-width: 950px) {
+  /* .container,
   .hidden,
   .sticky {
     padding: 3.5px 15px;
     width: calc(100%);
     color: whitesmoke;
   }
+*/
 
+  .list li a span {
+    display: initial;
+  }
   .logo span {
     margin-left: 2px;
   }
@@ -172,23 +183,23 @@
 
   .list {
     position: fixed;
-    width: 100%;
+    width: calc(100% - 60px);
     height: 100vh;
-    background: #282828d7;
-    top: 45px;
+    background: var(--color-1);
+    top: 0;
     left: -100%;
     text-align: center;
-    transition: all 0.5s;
+    transition: all 0.3s;
     display: flex;
     flex-direction: column;
-    align-items: flex-start;
+    align-items: center;
+    justify-content: flex-start;
   }
 
   .list li {
     display: block;
-    margin: 20px 0;
+    margin: 5px 0;
     line-height: 20px;
-    margin-left: 25%;
   }
 
   .list li:last-child {
@@ -206,7 +217,6 @@
   }
   .list li a svg {
     display: block;
-    margin-right: 10px;
   }
 
   .list li a:hover,
@@ -216,6 +226,34 @@
   }
 
   .check:checked ~ .list {
-    left: 0;
+    left: 60px;
+  }
+}
+
+@media screen and (max-width: 530px) {
+  .container {
+    top: 8px;
+    left: 10px;
+    height: calc(100dvh - 16px);
+    border-radius: var(--borderradius-size);
+    width: 40px;
+    padding: 18px 15px;
+  }
+
+  .list {
+    width: calc(100% - 70px);
+    height: calc(100dvh - 16px);
+    top: 8px;
+    left: -102%;
+    border-radius: var(--borderradius-size);
+  }
+
+  .logo svg {
+    width: 30px;
+    height: 30px;
+  }
+
+  .checkbtn {
+    font-size: 20px;
   }
 }
