--- a/src/components/Photo/photo.module.css
+++ b/src/components/Photo/photo.module.css
@@ -7,9 +7,8 @@
 }
 
 .container img {
-  position: absolute;
-  top: -50px;
-  left: 0%;
+  min-height: 100%;
+  width: 100%;
+  object-fit: cover;
   pointer-events: none;
-  scale: 1.1;
 }
