--- a/src/components/Stack/stack.module.css
+++ b/src/components/Stack/stack.module.css
@@ -2,6 +2,7 @@
   width: 100%;
   height: 100%;
   padding: 12px 24px;
+  overflow-y: auto;
 }
 
 .titlebox h4 {
@@ -15,19 +16,18 @@
   width: 100%;
   height: 90%;
   flex-wrap: wrap;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: 1px 18px;
+  align-items: center;
+  justify-content: center;
 }
 
 .tooltipcontainer {
+  margin: 0.4dvw;
   position: relative;
   transition: all 0.2s;
   font-size: medium;
   width: fit-content;
   height: 30px;
   box-sizing: border-box;
-
   --tooltip-bg: #303030;
   --tooltip-color: #fff;
   --margin: 0.5rem;
@@ -70,4 +70,9 @@
   visibility: visible;
   pointer-events: auto;
   transform: translateX(-50%) translateY(-110%) scale(1);
+}
+@media screen and (max-width: 530px) {
+  .maincontainer {
+    padding: 6px 12px;
+  }
 }
